Modified collections_compact_style option to include a dropdown action selector. collections_compact_style was set aside for experimental UI. Added collection name titlebar to contactsheet_settings. Fixed minimized collection text alignment a bit.
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@2410 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -83,10 +83,10 @@ a:active {text-decoration:underline;}
 .CollectionResourceAlign {width:77px;height:85px;text-align: center;vertical-align: middle;}
 
 #CollectionMinTitle{float: left;margin: 6px 10px 0px 25px;}
-#CollectionMinDropTitle{float: left;padding:0.2em 0em;margin-top: 6px;}
+#CollectionMinDropTitle{float: left;padding:0.2em 0em;margin-top: 8px;}
 #CollectionMinDrop{float: left;margin: 6px 0px 0px;padding:0.2em 0em}
 #CollectionMinDrop form{margin:0;padding:0}
-#CollectionMinitems{float: left;margin: 6px 10px 0px;padding:0.2em 0em}
+#CollectionMinitems{float: left;margin: 8px 10px 0px;padding:0.2em 0em}
 #CollectionMinRightNav{float: right;margin: 6px 25px 0px 0px;}
 
 #CollectionMinDrop .SearchWidth {width: 110px;font: 10px Tahoma, Arial, Helvetica, sans-serif;margin:0;padding: 0;}
